added search by name

--- a/Lab23SWAPI/Views/Shared/_Layout.cshtml
+++ b/Lab23SWAPI/Views/Shared/_Layout.cshtml
@@ -32,7 +32,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SW" asp-action="Index">Search by Id</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SW" asp-action="GetPersonByName">Search People by Name</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SW" asp-action="GetPlanetByName">Search Planets by Name</a>
                         </li>
                     </ul>
                 </div>
