--- a/Lab23SWAPI/Views/SW/Index.cshtml
+++ b/Lab23SWAPI/Views/SW/Index.cshtml
@@ -4,14 +4,15 @@
 }
 
 <h1>Choose</h1>
+<h1></h1>
 
-<form action="/SW/ResultPlanet" method="post">
-    Planet Id<input type="number" name="index" value="index" />
-
+<form action="/SW/ResultPlanetIndex" method="post">
+    Planet Index <input type="number" name="index" value="index" />
+    
     <input type="submit" value="Search" />
 </form>
-<form action="/SW/ResultPerson" method="post">
-    Person Id<input type="number" name="index" value="index" />
-
+<form action="/SW/ResultPersonIndex" method="post">
+    Person Index <input type="number" name="index" value="index" />
+   
     <input type="submit" value="Search" />
 </form>
